# ncbi-vdb3

./: .gitignore  CMakeLists.txt  Jenkinsfile  Makefile  README.md
db/: Makefile
interfaces/: memory.hpp
interfaces/collections/: Hash.hpp  HashTable.hpp  Random.hpp
interfaces/memory/: FillingMemoryMgr.hpp  MemoryBlockItf.hpp  MemoryManagerItf.hpp  PinnedMemoryMgr.hpp  PrimordialMemoryMgr.hpp  QuotaMemoryMgr.hpp  RawMemoryBlock.hpp  SharedMemoryMgr.hpp  TrackingMemoryManagerItf.hpp  TypedMemoryBlock.hpp  UniqueRawMemoryBlock.hpp
interfaces/ncbi/: fmt.hpp  jws.hpp  logging.hpp  uri.hpp
interfaces/ncbi/secure/: busy.hpp  string.hpp
jwt-tool/: .gitignore  Makefile
jwt-tool/inc/ncbi/: jwa.hpp  jwk.hpp  jwt.hpp
jwt-tool/json/: json-primitive.cpp  json.cpp
jwt-tool/jwa/: jwa-ecdsa.cpp  jwa-mgr.cpp  jwa-registry.cpp
jwt-tool/jwk/: jwk-key-cmn.cpp  jwk-key.cpp  jwk-mgr.cpp  jwk-set.cpp  jwk-tst.cpp
jwt-tool/jws/: jws-mgr.cpp
jwt-tool/jwt/: jwt-builder.cpp  jwt-claims.cpp  jwt-mgr.cpp  jwt-unverified.cpp
jwt-tool/secure/: except.cpp  payload.cpp  string.cpp
jwt-tool/tool/: cmdline.cpp  cmdline.hpp  env.cpp  fmt.cpp  fmt.hpp  init-jwt-tool.cpp  jwt-tool-exec.cpp  jwt-tool-init.cpp  jwt-tool.cpp  jwt-tool.hpp  main.cpp  sign-payload-list.txt  test-keys.jwks  test_pub.pem  tst-jwt-tool.sh
jwt-tool/tool/input/: extPemKeys2.txt  extPrivPem.jwk  extPubPem.jwk  sign-payload-list.txt  test_priv_pwd.txt
platform/: CMakeLists.txt  Makefile  memory.cpp
platform/cmn/: CMakeLists.txt
platform/cmn/test/: CMakeLists.txt
platform/collections/: Hash.cpp  Hash.hpp  HashTable.cpp  HashTable.hpp  Makefile  Random.hpp
platform/collections/test/: Makefile  test-Hash.cpp  test-HashTable.cpp  test-Random.cpp  test-main.cpp
platform/json/: Makefile  json.cpp
platform/json/test/: Makefile
platform/memory/: FillingMemoryMgr.cpp  Makefile  MemoryBlockItf.cpp  PinnedMemoryMgr.cpp  PrimordialMemoryMgr.cpp  QuotaMemoryMgr.cpp  RawMemoryBlock.cpp  SharedMemoryMgr.cpp  TrackingMemoryManagerItf.cpp  UniqueRawMemoryBlock.cpp  memory.cpp
platform/memory/test/: Makefile  MemoryManagerItf_Test.hpp  TrackingMemoryManagerItf_Test.hpp  test-FillingMemoryMgr.cpp  test-PinnedMemoryMgr.cpp  test-QuotaMemoryMgr.cpp  test-RawMemoryBlock.cpp  test-SharedMemoryMgr.cpp  test-TypedMemoryBlock.cpp  test-UniqueRawMemoryBlock.cpp  test-memory.cpp
platform/ncbi/: Makefile  cmdline.cpp  env.cpp  fmt.cpp  log-local.cpp  log.cpp  logger.cpp
platform/ncbi/test/: Makefile
platform/secure/: Makefile  except.cpp  string.cpp
platform/secure/test/: Makefile  except-tst.cpp  main.cpp  memset_s-tst.cpp  payload-tst.cpp  string-tst.cpp
platform/test/: Makefile  test-memory.cpp
server/: .gitignore  CMakeLists.txt  README.txt
server/app/: CMakeLists.txt
server/app/zux/: CMakeLists.txt  zux.cpp
server/src/zux/: CMakeLists.txt  zux.cpp
services/: Makefile
tests/fastq-client/: README.md
tests/fastq-server/: README.md
tools/: Makefile
tools/jwt-tool/: .gitignore  Makefile
tools/jwt-tool/jwa/: jwa-ecdsa.cpp  jwa-hmac.cpp  jwa-registry.hpp
tools/jwt-tool/jwk/: jwk-set.cpp
tools/jwt-tool/jwt/: jwt-builder.cpp  jwt-claims.cpp  jwt-mgr.cpp  jwt-tst.cpp
tools/playground/: .gitignore  a.py  acc_list.txt  data_access_modes_study.docx  db_stability.sh  fake_timeout.sh  make_cert.sh  nginx.conf  numbers.txt  partial.py  read_lib.py  reader.py  reader2.py  reader3.py  roundtrip.sh  roundtrip2.sh  roundtrip_db.sh  run.py  run2.py  sra.proto  stab6.db  stability.sh  stability2.sh  stability3.sh  stability_db.sh  stability_db_csra.sh  stability_loc.sh  timing.db  timing_db.sh  try_main.py  vdb.py  write_lib.py  writer.py  writer2.py
(+15 files in other folders)
